<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#000"
    android:layout_width="360dp"
    android:layout_height="300dp">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="112dp"
        android:layout_height="0dp"
        android:background="#22262D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <tw.com.lixin.wm_casino.tools.TableSwitchSelect
                android:id="@+id/baccarat_game"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:game_image="@drawable/game_01"
                app:game_name="@string/baccarat" />

            <tw.com.lixin.wm_casino.tools.TableSwitchSelect
                android:id="@+id/dragon_tiger_game"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:game_image="@drawable/games_04"
                app:game_name="@string/dragon_tiger" />

            <tw.com.lixin.wm_casino.tools.TableSwitchSelect
                android:id="@+id/roulette_game"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:game_image="@drawable/games_02"
                app:game_name="@string/roulette" />

            <tw.com.lixin.wm_casino.tools.TableSwitchSelect
                android:id="@+id/sic_bo_game"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:game_image="@drawable/games_03"
                app:game_name="@string/sic_bo" />

            <tw.com.lixin.wm_casino.tools.TableSwitchSelect
                android:id="@+id/niuniu_game"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:game_image="@drawable/games_05"
                app:game_name="@string/niuniu" />

            <tw.com.lixin.wm_casino.tools.TableSwitchSelect
                android:id="@+id/samgong_game"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:game_image="@drawable/games_06"
                app:game_name="@string/samgong" />

            <tw.com.lixin.wm_casino.tools.TableSwitchSelect
                android:id="@+id/fantan_game"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:game_image="@drawable/games_07"
                app:game_name="@string/fantan" />

        </LinearLayout>

    </ScrollView>

    <tw.com.atromoby.widgets.ItemsView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scrollView2"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>