<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:background="#2E5590"
    tools:ignore="ContentDescription,SpUsage"
    android:layout_height="360dp">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/text_box"
        android:layout_marginStart="8dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#222222"
        android:fillViewport="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <tw.com.lixin.wm_casino.tools.buttons.ClickText
                android:id="@+id/mss_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="1dp"
                android:padding="5dp"
                android:background="@drawable/message_border"
                android:text="@string/mss_1"
                android:textColor="#fff"
                android:textSize="20dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <tw.com.lixin.wm_casino.tools.buttons.ClickText
                android:id="@+id/mss_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="1dp"
                android:padding="5dp"
                android:background="@drawable/message_border"
                android:text="@string/mss_2"
                android:textColor="#fff"
                android:textSize="20dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mss_1" />

            <tw.com.lixin.wm_casino.tools.buttons.ClickText
                android:id="@+id/mss_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="1dp"
                android:padding="5dp"
                android:background="@drawable/message_border"
                android:text="@string/mss_3"
                android:textColor="#fff"
                android:textSize="20dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mss_2" />

            <tw.com.lixin.wm_casino.tools.buttons.ClickText
                android:id="@+id/mss_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="1dp"
                android:padding="5dp"
                android:background="@drawable/message_border"
                android:text="@string/mss_4"
                android:textColor="#fff"
                android:textSize="20dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mss_3" />

            <tw.com.lixin.wm_casino.tools.buttons.ClickText
                android:id="@+id/mss_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="1dp"
                android:padding="5dp"
                android:background="@drawable/message_border"
                android:text="@string/mss_5"
                android:textColor="#fff"
                android:textSize="20dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mss_4" />

            <tw.com.lixin.wm_casino.tools.buttons.ClickText
                android:id="@+id/mss_6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:padding="5dp"
                android:background="@drawable/message_border"
                android:text="@string/mss_6"
                android:textColor="#fff"
                android:textSize="20dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mss_5" />

            <tw.com.lixin.wm_casino.tools.buttons.ClickText
                android:id="@+id/mss_7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:padding="5dp"
                android:background="@drawable/message_border"
                android:text="@string/mss_7"
                android:textColor="#fff"
                android:textSize="20dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mss_6" />

            <tw.com.lixin.wm_casino.tools.buttons.ClickText
                android:id="@+id/mss_8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:padding="5dp"
                android:background="@drawable/message_border"
                android:text="@string/mss_8"
                android:textColor="#fff"
                android:textSize="20dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mss_7" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/limit_box"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#000"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/name"
            android:textColor="#fff"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/odds_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/odds"
            android:textColor="#fff"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/min_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/minimum"
            android:textColor="#fff"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/max_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/maximum"
            android:textColor="#fff"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <tw.com.atromoby.widgets.ItemsView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/limit_items_view"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/min_txt" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <tw.com.lixin.wm_casino.tools.buttons.ClickText
        android:id="@+id/limit_btn"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/message_butt_border"
        android:gravity="center"
        android:text="@string/limit"
        android:textColor="#fff"
        android:textSize="23dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <tw.com.lixin.wm_casino.tools.buttons.ClickText
        android:id="@+id/speaker_btn"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="45dp"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="#fff"
        android:textSize="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>