<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription,SpUsage"
    android:layout_width="220dp"
    android:background="#262626"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView22"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="2dp"
        android:text="@string/background_music"
        android:textColor="#fff"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/back_music_swich"
        app:layout_constraintEnd_toStartOf="@+id/back_music_swich"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_music_swich"
        app:layout_constraintVertical_bias="0.29000002" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/back_music_swich"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/effect_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/back_music_swich"
        app:layout_constraintStart_toStartOf="@+id/back_music_swich"
        app:layout_constraintTop_toBottomOf="@+id/back_music_swich" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="1dp"
        android:text="@string/sound_effect"
        android:textColor="#fff"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/effect_switch"
        app:layout_constraintEnd_toStartOf="@+id/effect_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/effect_switch" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/music"
        android:textColor="#fff"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textView22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>